Bug #6226 Unable to start server
Submitted: 23 Oct 2004 6:40 Modified: 20 Jan 2005 19:32
Reporter: Jack Ling
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.0.21 OS:Linux (Fedora Core 2)
Assigned to: Jim Winstead Target Version:

[23 Oct 2004 6:40] Jack Ling
Description:
Hi,

Previously, I've downloaded RPM format of MySQL for installation. I've encountered
problems. And, with advice from experts, later I tried downloading the tar.gz file instead
of RPM. I follow the steps as presented on the manual of "Installation for Other Unix-line
system".
Everything is smooth until I run mysql_install_db script. I still have the warnings:

Warning: ask for 196608 thread stack, but got 126976, Fill help tables
Warning: ask for 196608 thread stack, but got 126976,

The server has 256MB RAM installed and this round I've left more space, about 1.5GB
harddisk left.

Does the above message means insufficient RAM? ... or will it be because previously I try
installed version 5.0.1 in RPM format and left over some errors here?

If this is a problem of RAM limitation, what is the expected amount of RAM (just to make
it start) is needed? Any configurations works I can do to reduce the RAM usage?

version: MySQL 4.0.21 (previously I was trying version 5.0.1 having the problem and now I
try a lower version first)
OS: Fedora Core 2

best regards,
jackling

How to repeat:
install on Fedora Core 2 (same problem when previously tried on Fedora Core 1)
[23 Oct 2004 7:54] Hartmut Holzgraefe
It is ok to ignore this warning. The default value of 196KB is needed for our dynamic
builds only as some glibc versions need that much stack space for some calls. For our
static builds we use a glibc version that works fine with 128KB of thread stack and is
limited to
that size but for some reason the default is still set to 196KB.
[5 Jan 2005 19:20] Jim Winstead
The default thread stack size can now be specified during compilation with 
-DDEFAULT_THREAD_STACK, and our official builds will use this to avoid this warning.
[20 Jan 2005 19:32] Paul DuBois
Mentioned in 4.0.24 change notes.