Allow DEFAULT_THREAD_STACK to be set via -DDEFAULT_THREAD_STACK=...  so our official binary builds for Linux that are built against a static glibc with a 128k thread stack size limit can be compiled with a default that doesn't result in a harmless (but oft-misunderstood) warning message. (Bug #6226)